--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg p-lg-4">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand fs-3" href="#"><img src="images/logo.png" alt=""> Rent<span
                     class="fw-bold">Car</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,21 +36,33 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
                 </ul>
                 <button id="LogInBtn" class="me-0 btn">Log In</button>
             </div>
         </div>
     </nav>
     <section id="IntroductieSect">
-        <h1 class="fw-bold">RentCar</h1>
+        <h1>Rent<span>Car</span></h1>
         <img src="images/IntroductieSectImgLeft.png" alt="">
         <div class="shadow-lg" id="IntroductieDiv">
             <div id="IntroductieTextDiv">
                 <h1>Huur de beste autos naar je eigen keuze</h1>
-                <small>VANAF 1978</small>
+                <small>VANAF 1978 - UW VERTROUWDE PARTNER IN AUTOVERHUUR</small>
+                <p>Bent u op zoek naar de perfecte huurauto voor uw volgende reis of speciale gelegenheid? Zoek niet
+                    verder! Sinds 1974 zijn wij dé toonaangevende expert op het gebied van autoverhuur. Met bijna een
+                    halve eeuw aan ervaring en expertise, begrijpen wij als geen ander wat u nodig heeft.</P>
             </div>
             <img src="images/gallery.png" alt="">
         </div>
+    </section>
+    <section id="CarouselSect">
+
     </section>
 </body>
 
