--- a/index.html
+++ b/index.html
@@ -83,6 +83,59 @@
         </div>
     </section>
 
+    <section id="AutoSoortenSect">
+        <div id="AutoSoortenDiv">
+            <div class="AutoSoort">
+                <a href="">
+                    <img class="img" src="https://pngimg.com/d/tesla_car_PNG21.png" alt="">
+                    <h6 class="text-dark fw-bold">ELEKTRISCH</h6>
+                </a>
+            </div>
+            <div class="AutoSoort">
+                <a href="">
+                    <img class="img" src="https://www.motortrend.com/uploads/sites/5/2020/07/2020-audi-rs6.png" alt="">
+                    <h6 class="text-dark fw-bold">SPORT</h6>
+                </a>
+            </div>
+            <div class="AutoSoort">
+                <a href="">
+                    <img class="img" src="https://i.pinimg.com/originals/b9/d4/5e/b9d45eaaa6dec9f28e6fa5f73f4a4113.png" alt="">
+                    <h6 class="text-dark fw-bold">SUV</h6>
+                </a>
+            </div>
+            <div class="AutoSoort">
+                <a href="">
+                    <img class="img" src="https://www.bmw.nl/content/dam/bmw/common/all-models/8-series/convertible/2018/navigation/bmw-8-convertible-modelfinder-stage2-890x501.png" alt="">
+                    <h6 class="text-dark fw-bold">CABRIO</h6>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section id="SliderSect">
+        <div id="slider">
+            <div id="slider-track">
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+                <div class="slide">
+                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
