--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg p-lg-4">
         <div class="container">
-            <a class="navbar-brand fs-3" href="#"><img src="images/logo.png" alt=""> Rent<span
+            <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
                     class="fw-bold">Car</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -32,7 +34,7 @@
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="car-rent.html">Boeken</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -83,59 +85,69 @@
         </div>
     </section>
 
-    <section id="AutoSoortenSect">
-        <div id="AutoSoortenDiv">
-            <div class="AutoSoort">
-                <a href="">
-                    <img class="img" src="https://pngimg.com/d/tesla_car_PNG21.png" alt="">
-                    <h6 class="text-dark fw-bold">ELEKTRISCH</h6>
-                </a>
+    <section id="InformatieSection">
+        <div class="InfoDiv shadow">
+            <img src="https://cdn-icons-png.flaticon.com/512/7133/7133312.png" alt="">
+            <div>
+                <h6>20+</h6>
+                <small>Meer dan 20 vestigingen</small>
             </div>
-            <div class="AutoSoort">
-                <a href="">
-                    <img class="img" src="https://www.motortrend.com/uploads/sites/5/2020/07/2020-audi-rs6.png" alt="">
-                    <h6 class="text-dark fw-bold">SPORT</h6>
-                </a>
+        </div>
+        <div class="InfoDiv shadow">
+            <img src="https://www.iconpacks.net/icons/2/free-car-icon-2897-thumb.png" alt="">
+            <div>
+                <h6>50+</h6>
+                <small>Meer dan 50 auto soorten</small>
             </div>
-            <div class="AutoSoort">
-                <a href="">
-                    <img class="img" src="https://i.pinimg.com/originals/b9/d4/5e/b9d45eaaa6dec9f28e6fa5f73f4a4113.png" alt="">
-                    <h6 class="text-dark fw-bold">SUV</h6>
-                </a>
+        </div>
+        <div class="InfoDiv shadow">
+            <img src="https://icons.veryicon.com/png/o/miscellaneous/hifive-official-website-icon-library/country-5.png"
+                alt="">
+            <div>
+                <h6>30+</h6>
+                <small>In meer dan 30 landen</small>
             </div>
-            <div class="AutoSoort">
-                <a href="">
-                    <img class="img" src="https://www.bmw.nl/content/dam/bmw/common/all-models/8-series/convertible/2018/navigation/bmw-8-convertible-modelfinder-stage2-890x501.png" alt="">
-                    <h6 class="text-dark fw-bold">CABRIO</h6>
-                </a>
+        </div>
+        <div class="InfoDiv shadow">
+            <img src="https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/star-512.png" alt="">
+            <div>
+                <h6>4.7+</h6>
+                <small>Klanten raten ons hoger dan 4.7</small>
             </div>
         </div>
     </section>
 
-    <section id="SliderSect">
-        <div id="slider">
-            <div id="slider-track">
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
-                </div>
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
-                </div>
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
-                </div>
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
-                </div>
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
-                </div>
-                <div class="slide">
-                    <img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c18.png" height="auto" width="100" alt="">
+    <footer>
+        <div>
+            <div>
+                <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
+                        class="fw-bold">Car</span></a>
+            </div>
+            <div class="footer-column">
+                <h4 class="fw-bold">Navigatie</h4>
+                <a class="nav-link" href="#IntroductieSect"><p class="mb-0">Informatie</p></a>
+                <a class="nav-link" href="#"><p class="mb-0">Boeken</p></a>
+            </div>
+            <div class="footer-column">
+                <h4 class="fw-bold">Navigatie</h4>
+                <p class="mb-0">Informatie</p>
+                <p class="mb-0">Boeken</p>
+            </div>
+            <div class="footer-contact-column">
+                <h4 class="fw-bold">Volg ons op sociale media</h4>
+                <div class="d-flex">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-instagram ms-2"></i>
+                    <i class="bi bi-twitter-x ms-2"></i>
                 </div>
             </div>
         </div>
-    </section>
+        <hr>
+        <div class="d-flex justify-content-center">
+            <p>Copyright © 2023. All rights are reserved</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
