--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Homepage</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="car-rent.html">Boeken</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Auto's</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <button id="LogInBtn" class="me-0 btn">Log In</button>
+                <a href="log-in.html"><button id="LogInBtn" class="me-0 btn">Log In</button></a>
             </div>
         </div>
     </nav>
     <section id="IntroductieSect">
         <h1>Rent<span>Car</span></h1>
-        <img src="images/IntroductieSectImgLeft.png" alt="">
+        <img src="images/porche.png" alt="">
         <div class="shadow" id="IntroductieDiv">
             <div id="IntroductieTextDiv">
                 <h1>Huur de beste autos naar je eigen keuze</h1>
@@ -89,14 +89,14 @@
         <div class="InfoDiv shadow">
             <img src="https://cdn-icons-png.flaticon.com/512/7133/7133312.png" alt="">
             <div>
-                <h6>20+</h6>
+                <h6 class="fw-bold">20+</h6>
                 <small>Meer dan 20 vestigingen</small>
             </div>
         </div>
         <div class="InfoDiv shadow">
             <img src="https://www.iconpacks.net/icons/2/free-car-icon-2897-thumb.png" alt="">
             <div>
-                <h6>50+</h6>
+                <h6 class="fw-bold">50+</h6>
                 <small>Meer dan 50 auto soorten</small>
             </div>
         </div>
@@ -104,14 +104,14 @@
             <img src="https://icons.veryicon.com/png/o/miscellaneous/hifive-official-website-icon-library/country-5.png"
                 alt="">
             <div>
-                <h6>30+</h6>
+                <h6 class="fw-bold">30+</h6>
                 <small>In meer dan 30 landen</small>
             </div>
         </div>
         <div class="InfoDiv shadow">
             <img src="https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/star-512.png" alt="">
             <div>
-                <h6>4.7+</h6>
+                <h6 class="fw-bold">4.7+</h6>
                 <small>Klanten raten ons hoger dan 4.7</small>
             </div>
         </div>
