--- a/car-rent.html
+++ b/car-rent.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Your Car</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,11 +12,75 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg p-lg-4">
+        <div class="container">
+            <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
+                    class="fw-bold">Car</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="car-rent.html">Boeken</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Auto's</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <a href="log-in.html"><button id="LogInBtn" class="me-0 btn">Log In</button></a>
+            </div>
+        </div>
+    </nav>
+
+
+
+    <footer>
+        <div>
+            <div>
+                <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
+                        class="fw-bold">Car</span></a>
+            </div>
+            <div class="footer-column">
+                <h4 class="fw-bold">Navigatie</h4>
+                <a class="nav-link" href="#IntroductieSect"><p class="mb-0">Informatie</p></a>
+                <a class="nav-link" href="#"><p class="mb-0">Boeken</p></a>
+            </div>
+            <div class="footer-column">
+                <h4 class="fw-bold">Navigatie</h4>
+                <p class="mb-0">Informatie</p>
+                <p class="mb-0">Boeken</p>
+            </div>
+            <div class="footer-contact-column">
+                <h4 class="fw-bold">Volg ons op sociale media</h4>
+                <div class="d-flex">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-instagram ms-2"></i>
+                    <i class="bi bi-twitter-x ms-2"></i>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="d-flex justify-content-center">
+            <p>Copyright © 2023. All rights are reserved</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
