select car half done

--- a/car-rent.html
+++ b/car-rent.html
@@ -50,16 +50,15 @@
 
     <section id="SelectCarSection">
         <h1>Auto Modellen</h1>
-        <h4>Kies wat je wilt</h4>
         <p>Kies zelf welke optie het best bij jou past</p>
         <div id="SelectCarContent">
-            <div style="width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="KlasButtons">
-                <button class="klas">S</button>
-                <button class="klas">A</button>
-                <button class="klas">B</button>
-                <button id="ButtonC" class="klas" onclick="Cklas()">C</button>
+            <div id="KlasButtons">
+                <button id="ButtonS" class="klas" onclick="Porche()">S</button>
+                <button id="ButtonA" class="klas" onclick="BMW()">A</button>
+                <button id="BubttonB" class="klas" onclick="Toyota()">B</button>
+                <button id="ButtonC" class="klas" onclick="Golf()">C</button>
             </div>
-            <img src="https://pngimg.com/d/volkswagen_PNG1824.png" alt="">
+            <img id="autoAfbeelding" src="" alt="Auto afbeelding">
             <div id="Specs">
                 <div class="spec">
                     <span>Merk:</span>
