--- a/car-rent.html
+++ b/car-rent.html
@@ -53,10 +53,10 @@
         <p>Kies zelf welke optie het best bij jou past</p>
         <div id="SelectCarContent">
             <div id="KlasButtons">
-                <button id="ButtonS" class="klas" onclick="Porche()">S</button>
-                <button id="ButtonA" class="klas" onclick="BMW()">A</button>
-                <button id="BubttonB" class="klas" onclick="Toyota()">B</button>
-                <button id="ButtonC" class="klas" onclick="Golf()">C</button>
+                <button id="ButtonS" class="klas" onclick="Porche()"><span class="tier">S</span></button>
+                <button id="ButtonA" class="klas" onclick="BMW()"><span class="tier">A</span></button>
+                <button id="BubttonB" class="klas" onclick="Toyota()"><span class="tier">B</span></button>
+                <button id="ButtonC" class="klas" onclick="Golf()"><span class="tier">C</span></button>
             </div>
             <img id="autoAfbeelding" src="" alt="Auto afbeelding">
             <div id="Specs">
@@ -83,6 +83,10 @@
                 <div class="spec">
                     <span>Brandstof:</span>
                     <span id="brandstof"></span>
+                </div>
+                <div class="spec">
+                    <span>Prijs:</span>
+                    <span id="prijs"></span>
                 </div>
             </div>
         </div>
