--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Homepage</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="car-rent.html">Boeken</a>
@@ -40,80 +40,34 @@
                         <a class="nav-link" href="#">Auto's</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
                 <a href="log-in.html"><button id="LogInBtn" class="me-0 btn">Log In</button></a>
             </div>
         </div>
     </nav>
-    <section id="IntroductieSect">
-        <h1>Rent<span>Car</span></h1>
-        <img src="images/porche.png" alt="">
-        <div class="shadow" id="IntroductieDiv">
-            <div id="IntroductieTextDiv">
-                <h1>Huur de beste autos naar je eigen keuze</h1>
-                <small>VANAF 1978 - UW VERTROUWDE PARTNER IN AUTOVERHUUR</small>
-                <p>Bent u op zoek naar de perfecte huurauto voor uw volgende reis of speciale gelegenheid? Zoek niet
-                    verder! Sinds 1974 zijn wij dé toonaangevende expert op het gebied van autoverhuur. Met bijna een
-                    halve eeuw aan ervaring en expertise, begrijpen wij als geen ander wat u nodig heeft.</P>
-            </div>
-            <img src="images/gallery.png" alt="">
-        </div>
-    </section>
-    <section id="CarouselSect">
-        <div id="carouselExample" class="carousel slide shadow">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/carousel-img(1).png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="images/carousel-img(2).png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="images/carousel-img(1).png" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
 
-    <section id="InformatieSection">
-        <div class="InfoDiv shadow">
-            <img src="https://cdn-icons-png.flaticon.com/512/7133/7133312.png" alt="">
-            <div>
-                <h6 class="fw-bold">20+</h6>
-                <small>Meer dan 20 vestigingen</small>
+    <section class="container py-3" id="ContactSection">
+        <div id="ContactInfo">
+            <div class="Info">
+                <h1><i class="bi bi-geo-alt infoicon"></i></h1>
+                <h3 class="fw-bold">Adres</h2>
+                <p>Koningin Lahandanplein 31</p>
+            </div>
+            <div class="Info">
+                <h1><i class="bi bi-telephone"></i></h1>
+                <h3>Telefoonnummer</h3>
+                <p>+31 1234567890</p>
+            </div>
+            <div class="Info">
+                <h1><i class="bi bi-envelope"></i></h1>
+                <h3>Email</h3>
+                <p>info@rentcar.nl</p>
             </div>
         </div>
-        <div class="InfoDiv shadow">
-            <img src="https://www.iconpacks.net/icons/2/free-car-icon-2897-thumb.png" alt="">
-            <div>
-                <h6 class="fw-bold">50+</h6>
-                <small>Meer dan 50 auto soorten</small>
-            </div>
-        </div>
-        <div class="InfoDiv shadow">
-            <img src="https://icons.veryicon.com/png/o/miscellaneous/hifive-official-website-icon-library/country-5.png"
-                alt="">
-            <div>
-                <h6 class="fw-bold">30+</h6>
-                <small>In meer dan 30 landen</small>
-            </div>
-        </div>
-        <div class="InfoDiv shadow">
-            <img src="https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/star-512.png" alt="">
-            <div>
-                <h6 class="fw-bold">4.7+</h6>
-                <small>Klanten raten ons hoger dan 4.7</small>
-            </div>
+        <div id="ContactForm">
+            
         </div>
     </section>
 
