--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Homepage</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="car-rent.html">Boeken</a>
@@ -96,8 +96,8 @@
         <div class="InfoDiv shadow">
             <img src="https://www.iconpacks.net/icons/2/free-car-icon-2897-thumb.png" alt="">
             <div>
-                <h6 class="fw-bold">50+</h6>
-                <small>Meer dan 50 auto soorten</small>
+                <h6 class="fw-bold">10+</h6>
+                <small>Meer dan 10 auto soorten</small>
             </div>
         </div>
         <div class="InfoDiv shadow">
