--- a/car-rent.html
+++ b/car-rent.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#">Auto's</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <a href="log-in.html"><button id="LogInBtn" class="me-0 btn">Log In</button></a>
