--- a/car-rent.html
+++ b/car-rent.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg p-lg-4">
         <div class="container">
-            <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
+            <a class="navbar-brand fs-3" href="index.html"><img class="logo" src="images/logo.png" alt=""> Rent<span
                     class="fw-bold">Car</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -57,7 +57,30 @@
                 <button id="ButtonA" class="klas" onclick="BMW()"><span class="tier">A</span></button>
                 <button id="BubttonB" class="klas" onclick="Toyota()"><span class="tier">B</span></button>
                 <button id="ButtonC" class="klas" onclick="Golf()"><span class="tier">C</span></button>
+                <div id="OptiesDiv">
+                    <div class="Opties">
+                        <button class="btn btn-primary">Porche</button>
+                        <button>Porche</button>
+                        <button>Porche</button>
+                    </div>
+                    <div class="Opties">
+                        <button>Porche</button>
+                        <button>Porche</button>
+                        <button>Porche</button>
+                    </div>
+                    <div class="Opties">
+                        <button>Porche</button>
+                        <button>Porche</button>
+                        <button>Porche</button>
+                    </div>
+                    <div class="Opties">
+                        <button>Porche</button>
+                        <button>Porche</button>
+                        <button>Porche</button>
+                    </div>
+                </div>
             </div>
+
             <img id="autoAfbeelding" src="" alt="Auto afbeelding">
             <div id="Specs">
                 <div class="spec">
