--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg p-lg-4">
         <div class="container">
-            <a class="navbar-brand fs-3" href="#"><img class="logo" src="images/logo.png" alt=""> Rent<span
+            <a class="navbar-brand fs-3" href="index.html"><img class="logo" src="images/logo.png" alt=""> Rent<span
                     class="fw-bold">Car</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
