auto select klaar

--- a/car-rent.html
+++ b/car-rent.html
@@ -53,30 +53,30 @@
         <p>Kies zelf welke optie het best bij jou past</p>
         <div id="SelectCarContent">
             <div id="KlasButtons">
-                <button id="ButtonS" class="klas" onclick="Porche()"><span class="tier">S</span></button>
-                <button id="ButtonA" class="klas" onclick="BMW()"><span class="tier">A</span></button>
-                <button id="BubttonB" class="klas" onclick="Toyota()"><span class="tier">B</span></button>
-                <button id="ButtonC" class="klas" onclick="Golf()"><span class="tier">C</span></button>
+                <button id="ButtonS" class="klas"><span class="tier">S</span></button>
+                <button id="ButtonA" class="klas"><span class="tier">A</span></button>
+                <button id="BubttonB" class="klas"><span class="tier">B</span></button>
+                <button id="ButtonC" class="klas"><span class="tier">C</span></button>
                 <div id="OptiesDiv">
                     <div class="Opties">
-                        <button class="btn btn-primary">Porche</button>
-                        <button>Porche</button>
-                        <button>Porche</button>
+                        <button onclick="Porche()" class="optie">Porche</button>
+                        <button onclick="Mercedes()" class="optie"><small>Mercedes</small></button>
+                        <button onclick="Audi()" class="optie"><small>Audi</small></button>
                     </div>
                     <div class="Opties">
-                        <button>Porche</button>
-                        <button>Porche</button>
-                        <button>Porche</button>
+                        <button onclick="BMW()" class="optie">BMW</button>
+                        <button onclick="Lexus()" class="optie">Lexus</button>
+                        <button onclick="Volvo()" class="optie">Volvo</button>
                     </div>
                     <div class="Opties">
-                        <button>Porche</button>
-                        <button>Porche</button>
-                        <button>Porche</button>
+                        <button onclick="Toyota()" class="optie">Toyota</button>
+                        <button onclick="Ford()" class="optie">Ford</button>
+                        <button onclick="Honda()" class="optie">Honda</button>
                     </div>
                     <div class="Opties">
-                        <button>Porche</button>
-                        <button>Porche</button>
-                        <button>Porche</button>
+                        <button onclick="Volkswagen()" class="optie"><small>Volkswagen</small></button>
+                        <button onclick="Hyundai()" class="optie">Hyundai</button>
+                        <button onclick="Kia()" class="optie">Kia</button>
                     </div>
                 </div>
             </div>
