--- a/car-rent.html
+++ b/car-rent.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <img id="autoAfbeelding" src="" alt="Auto afbeelding">
+            <img id="autoAfbeelding" src="" >
             <div id="Specs">
                 <div class="spec">
                     <span>Merk:</span>
