--- a/car-rent.html
+++ b/car-rent.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="car-rent.html">Boeken</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Auto's</a>
+                        <a class="nav-link" href="autos.html">Auto's</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -53,10 +53,10 @@
         <p>Kies zelf welke optie het best bij jou past</p>
         <div id="SelectCarContent">
             <div id="KlasButtons">
-                <button id="ButtonS" class="klas"><span class="tier">S</span></button>
-                <button id="ButtonA" class="klas"><span class="tier">A</span></button>
-                <button id="BubttonB" class="klas"><span class="tier">B</span></button>
-                <button id="ButtonC" class="klas"><span class="tier">C</span></button>
+                <button id="ButtonS" class="klas"><span class="tier">Diamond</span></button>
+                <button id="ButtonA" class="klas"><span class="tier">Gold</span></button>
+                <button id="BubttonB" class="klas"><span class="tier">Silver</span></button>
+                <button id="ButtonC" class="klas"><span class="tier">Bronze</span></button>
                 <div id="OptiesDiv">
                     <div class="Opties">
                         <button onclick="Porche()" class="optie">Porche</button>
