--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="car-rent.html">Boeken</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Auto's</a>
+                        <a class="nav-link" href="autos.html">Auto's</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
